# infomaniak

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  example.py  infomaniak_cli.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: .gitignore  AGENTS.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/src/: chk.md  index.md  pagination.md  tasks.md
docs/src/ai/: index.md
docs/src/backup/: administrator.md  billing.md  index.md  passwords.md  product.md  slots.md
docs/src/cloud/: config.md  index.md  kubernetes.md  projects.md
docs/src/cloud/database/: backups.md  config.md  data.md  index.md  ip.md  restore.md  scheduled.md
docs/src/cloud/kubernetes/: data.md  index.md  ip.md  pools.md
docs/src/core/: actions.md  countries.md  events.md  index.md  ksuite.md  languages.md  products.md  profile.md  tasks.md  timezones.md  user.md
docs/src/core/ksuite/: mailbox.md
docs/src/core/profile/: avatar.md  email.md  info.md  password.md  phone.md
docs/src/core/user/: acccounts.md  accounts.md  teams.md
docs/src/dns/: domain.md  index.md  tld.md  zone.md
docs/src/dns/domain/: dnssec.md  nameservers.md  order.md
docs/src/dns/zone/: records.md
docs/src/domain/: index.md  nameservers.md
docs/src/etickets/: index.md
docs/src/kchat/: bots.md  channels.md  commands.md  emoji.md  files.md  groups.md  index.md  insights.md  posts.md  preferences.md  reactions.md  roles.md  status.md  system.md  teams.md  threads.md  users.md  webhooks.md
docs/src/kdrive/: index.md
docs/src/kmeet/: index.md  plan.md  room.md
docs/src/mail/: index.md  mailbox_management.md  mailboxes.md
docs/src/mail/mailboxes/: accesses.md  aliases.md  auto_reply.md  filters.md  folders.md  (+3 more)
docs/src/newsletter/: campaigns.md  credits.md  dashboard.md  domains.md  fields.md  groups.md  index.md  operations.md  segments.md  subscribers.md  templates.md  webforms.md
docs/src/radio/: index.md
docs/src/tickets/: index.md
docs/src/tutorials/: pagination.md
docs/src/url/: index.md  short.md
docs/src/video/: channel.md  countries.md  event.md  index.md  integrations.md  live.md  options.md  order.md  players.md  prices.md  restrictions.md  stats.md  stream.md  thumbnail.md  timezones.md
docs/src/vod/: index.md
infomaniak/: __init__.py  __main__.py  api.py  cli.py  config.py  output.py  pagination.py  register.py  resource.py  utils.py
infomaniak/clients/: __init__.py  __root__.py  base.py  sync.py
infomaniak/commands/: account.py  audit.py  config.py  dns.py  domains.py  drive.py  hosting.py  mail.py  products.py  propagation.py  setup.py  status.py  zone.py
infomaniak/models/: __init__.py  chk.py  core.py
infomaniak/models/backup/: __init__.py  common.py
infomaniak/models/cloud/: __init__.py  config.py  database.py  projects.py  public_cloud.py
infomaniak/models/dns/: __init__.py  zone.py
infomaniak/models/domain/: __init__.py  nameservers.py
infomaniak/models/newsletter/: __init__.py  common.py
infomaniak/resources/: __init__.py  chk.py  tasks.py
infomaniak/resources/backup/: __init__.py  administrator.py  billing.py  passwords.py  product.py  slots.py
infomaniak/resources/cloud/: __init__.py  config.py  projects.py
infomaniak/resources/core/: __init__.py  actions.py  countries.py  events.py  languages.py  products.py  tasks.py  timezones.py
infomaniak/resources/dns/: __init__.py  tld.py
infomaniak/resources/domain/: __init__.py  nameservers.py
infomaniak/resources/kchat/: __init__.py  bots.py  channels.py  commands.py  emoji.py  files.py  groups.py  insights.py  posts.py  preferences.py  reactions.py  roles.py  status.py  system.py  teams.py  threads.py  users.py  webhooks.py
infomaniak/resources/kmeet/: __init__.py  plan.py  room.py
infomaniak/resources/mail/: __init__.py  mailbox_management.py
infomaniak/resources/newsletter/: __init__.py  credits.py  dashboard.py  domains.py  fields.py  operations.py
infomaniak/resources/url/: __init__.py  short.py
infomaniak/resources/video/: __init__.py  channel.py  countries.py  event.py  integrations.py  live.py  order.py  prices.py  restrictions.py  stream.py  thumbnail.py  timezones.py
infomaniak_cli/commands/: mail.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_integration.py  test_output.py  test_sample.py
tests/cloud/kubernetes/: test_delete.py
tests/commands/: test_account.py  test_audit.py  test_config.py  test_dns.py  test_domains.py  test_drive.py  test_hosting.py  test_mail.py  test_products.py  test_propagation.py  test_status.py  test_zone.py
(+94 files in other folders)
