[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xinfomaniak"
version = "0.0.0"
description = "Python client library for the Infomaniak API with a minimal token-page helper CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "LongLink SAGL", email = "info@longlink.ch" },
]
keywords = ["infomaniak", "sdk", "library", "python", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dacite>=1.9.2",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/XLongLink/infomaniak"
Repository = "https://github.com/XLongLink/infomaniak"
Issues = "https://github.com/XLongLink/infomaniak/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0", 
    "pytest-cov",
    "isort"
]

[project.scripts]
infomaniak = "infomaniak:main"

[tool.setuptools.packages.find]
include = ["infomaniak*"]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.isort]
from_first = false
no_sections = true
lines_between_types = 0
length_sort = true
